--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -543,6 +543,7 @@ nav .nav-contint .nav-bar .nav-link img {
   width: 15px;
   height: 15px;
   object-fit: contain;
+  filter: var(--green-filter);
 }
 
 .products-section .product-card .card-body .count-value {
