--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,11 +1,10 @@
 .we-are-section {
-  padding-top: 80px;
+  padding-top: 95px;
 }
 
 @media (min-width: 992px) {
-
   .we-are-section {
-    padding-top: 250px;
+    padding-top: 270px;
   }
 }
 
@@ -38,19 +37,13 @@
 }
 
 .we-are-info .we-are-desc {
-  font-size: 0.75rem;
   font-weight: 400;
-  line-height: 40px;
+  font-size: 1rem;
+  line-height: 1.7;
   color: #000;
   margin-bottom: 0px;
 }
 
-@media (min-width: 992px){
-  .we-are-info .we-are-desc {
-    font-size: 1rem;
-    line-height: 50px;
-  }
-}
 
 .we-are-info .we-are-desc:not(:last-child) {
   margin-bottom: 30px;
