--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,56 @@
 @media (min-width: 576px) {
   .products-section .product-contint {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .products-section .product-card{
-    max-width: auto;
+    row-gap: 1.5rem;
+    column-gap: 1rem;
   }
 
   .feature-contint .feature-item {
     flex: 1;
+  }
+
+  .products-section .product-card .card-body .card-title {
+    font-size: 1.25rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .products-section .product-card .card-body .card-items{
+    margin-bottom: 0.75rem;
+  }
+
+  .products-section .product-card .card-body .card-items .card-price:last-child {
+    display: block;
+  }
+
+  .products-section .product-card .card-body .card-btns {
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    margin-bottom: 0.5rem;
+  }
+
+  .products-section .nav-pills .nav-link {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .products-section .product-card .card-body .add-btn {
+    position: static;
+    width: 123px;
+    height: auto;
+    padding: 0.5rem 1rem;
+    border-radius: 2px;
+  }
+
+  .products-section .product-card .card-body .add-btn.active .cart-text-done,
+  .products-section .product-card .card-body .add-btn .cart-text {
+    display: block;
+  }
+
+  .products-section .product-card .card-body .add-btn.active{
+    transform: none;
+  }
+
+  .products-section .product-card .card-body .add-btn.active .cart-text {
+    display: none;
   }
 }
 
@@ -16,6 +58,10 @@
   .custom-container {
     padding: 0;
     max-width: 720px;
+  }
+
+  .custom-title .section-title {
+    font-size: 1.25rem;
   }
 
   .products-section .product-contint {
@@ -41,7 +87,7 @@
 }
 
 @media (min-width: 992px) {
-  .products-section .custom-title .menu{
+  .products-section .custom-title .menu {
     display: flex;
   }
 
@@ -53,8 +99,21 @@
     display: block;
   }
 
-  .header{
-    display: block;
+  .header .header-contint {
+    padding: 0;
+  }
+
+  .header .header-contint .avatar {
+    width: 130px;
+    height: 130px;
+  }
+
+  .header .header-contint .header-list {
+    display: flex;
+  }
+
+  .header .header-contint .menu-icon {
+    display: none;
   }
 
   .hero-section {
@@ -95,5 +154,13 @@
 
   .products-section .product-contint {
     grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media (min-width: 1920px) {
+  .products-section .product-contint {
+    grid-template-columns: repeat(6, 1fr);
+    row-gap: 2rem;
+    column-gap: 1.5rem;
   }
 }
