--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@
   font-weight: 700;
 }
 
-main{
+main {
   margin-top: 65px;
 }
 
@@ -89,8 +89,8 @@ button:focus {
   display: none;
 }
 
-.nav-padding{
-  padding-top: calc(50px + 2.5rem) ;
+.nav-padding {
+  padding-top: calc(50px + 2.5rem);
   padding-bottom: 2.5rem;
 }
 
@@ -224,8 +224,8 @@ input[type="number"] {
   display: none;
 }
 
-.swiper-button-next.swiper-button-disabled, 
-.swiper-button-prev.swiper-button-disabled{
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
   opacity: 1;
 }
 
@@ -235,7 +235,7 @@ input[type="number"] {
   margin: 0 auto;
 }
 
-.scroll-top-btn{
+.scroll-top-btn {
   width: 40px;
   height: 40px;
   position: fixed;
@@ -252,11 +252,11 @@ input[type="number"] {
   transition: all 0.3s ease;
 }
 
-.scroll-top-btn.show{
+.scroll-top-btn.show {
   transform: translateX(0);
 }
 
-.scroll-top-btn img{
+.scroll-top-btn img {
   width: 20px;
   height: 20px;
   object-fit: contain;
@@ -694,13 +694,13 @@ nav .nav-contint .nav-bar .nav-link img {
 /* hero-section */
 
 .hero-section {
-  min-height: 100vh;
+  min-height: calc((var(--vh, 1vh) * 100) - (65px));
   background: url('../images/icons/hero_cover.png') no-repeat bottom/ contain var(--light-green);
 }
 
 .product-hero {
   width: 100%;
-  max-height: 500px;
+  max-height: 300px;
   aspect-ratio: 16/9;
   background: url('../images/prouct_hero.svg') no-repeat center left/ cover;
 }
@@ -776,7 +776,7 @@ nav .nav-contint .nav-bar .nav-link img {
   color: var(--white);
 }
 
-.products-section .custom-title .menu span{
+.products-section .custom-title .menu span {
   display: none;
 }
 
@@ -798,11 +798,6 @@ nav .nav-contint .nav-bar .nav-link img {
   border-radius: 18px;
   box-shadow: 0px 5px 10px 0px #00000015;
   transition: 0.3s all linear;
-}
-
-.product-card:hover {
-  box-shadow: 0px 5px 10px 0px #00000025;
-  transform: translateY(-5px);
 }
 
 .product-card .product-img {
@@ -837,13 +832,13 @@ nav .nav-contint .nav-bar .nav-link img {
 }
 
 .product-card .card-body .card-items .card-price {
-  font-size: 11px;
+  font-size: 12px;
   font-weight: 400;
   margin-bottom: 0;
   flex: 1;
 }
 
-.product-card .card-body .card-items .card-price:last-child{
+.product-card .card-body .card-items .card-price:nth-child(2) {
   text-align: left;
 }
 
@@ -859,7 +854,7 @@ nav .nav-contint .nav-bar .nav-link img {
 }
 
 .product-card .card-body .nav.nav-pills li {
-  width: 50%;
+  min-width: 50%;
 }
 
 .product-card .nav-pills .nav-link.active,
@@ -947,15 +942,11 @@ nav .nav-contint .nav-bar .nav-link img {
 }
 
 .product-card .card-body .add-btn.active {
-  transform: rotate(360deg);
+  /* transform: rotate(360deg); */
   background-color: var(--light-green);
   color: var(--green);
 }
 
-.product-card .card-body .add-btn.active:hover {
-  background-color: var(--green);
-  color: var(--white);
-}
 
 .product-card .card-body .add-btn .check-icon,
 .product-card .card-body .add-btn.active .cart-icon {
@@ -965,10 +956,6 @@ nav .nav-contint .nav-bar .nav-link img {
 .product-card .card-body .add-btn.active .check-icon {
   display: block;
   filter: var(--green-filter);
-}
-
-.product-card .card-body .add-btn.active:hover .check-icon {
-  filter: invert(1);
 }
 
 
@@ -984,14 +971,17 @@ nav .nav-contint .nav-bar .nav-link img {
   transition: all 0.3s ease-in-out 0.1s;
 }
 
-.product-card .card-body .add-btn:hover,
-.more-product:hover {
-  background-color: var(--light-green);
-  color: var(--green);
-}
 
-.product-card .card-body .add-btn:hover img {
-  filter: var(--green-filter);
+@media(hover:hover) and (pointer:fine) {
+  .product-card .card-body .add-btn:not(.active):hover {
+    background-color: #027a2e;
+    color: var(--white);
+  }
+
+  .product-card:hover {
+    box-shadow: 0px 5px 10px 0px #00000025;
+    transform: translateY(-5px);
+  }
 }
 
 .more-product {
@@ -1130,7 +1120,7 @@ nav .nav-contint .nav-bar .nav-link img {
 }
 
 .duplicated-slider-arrow .slider-arrow.prev-btn {
-  left:  calc(-40px / 2);
+  left: calc(-40px / 2);
   right: auto;
 }
 
@@ -1145,7 +1135,7 @@ nav .nav-contint .nav-bar .nav-link img {
   color: #9e9e9e !important
 }
 
-.duplicated-slider-arrow .slider-arrow.swiper-button-disabled img{
+.duplicated-slider-arrow .slider-arrow.swiper-button-disabled img {
   filter: invert(0.5);
 }
 
@@ -1190,110 +1180,6 @@ nav .nav-contint .nav-bar .nav-link img {
     top: calc(300px / 2);
     transform: none;
   }
-
-}
-@media(max-width:575.98px) {
-
-  :root {
-
-    --title-1: 32px;
-    --title-2: 28px;
-    --title-3: 24px;
-    --title-4: 22px;
-    --title-5: 20px;
-    --title-6: 18px;
-    --title-7: 16px;
-
-    --border-r-1: 15px;
-    --border-r-2: 10px;
-    --border-r-3: 8px;
-  }
-
-
-  .duplicated-breadcrumb {
-
-    min-height: 220px;
-  }
-
-  .show-more-link:not(.lg-btn) {
-
-    max-width: 120px;
-  }
-
-  .slider-end {
-
-    padding-bottom: calc(1.5rem - 1rem);
-  }
-
-  .scrollbar-slider {
-
-    padding-bottom: 1rem;
-  }
-
-  .scrollbar-slider .swiper-scrollbar {
-
-    display: block;
-    height: 3px;
-  }
-
-  .slider-container.no-m-arrow .slider-arrow {
-
-    display: none;
-  }
-
-  img.col-home-img {
-
-    max-height: 250px;
-  }
-
-  .product-features-area {
-
-    padding: 2rem 1rem;
-  }
-
-  .product-features-area .product-features-texts .feature-item .item-icon {
-
-    margin-left: .75rem;
-  }
-
-  .products-banners-area .banner-item {
-
-    padding: 2rem 1.5rem;
-
-  }
-
-  .products-banners-area .banner-item .banner-img {
-
-    max-height: 250px;
-  }
-
-  .about-area .about-img img {
-
-    max-height: 250px;
-  }
-
-  .about-area .about-text .about-desc,
-  .features-area .features-title-wrap .desc {
-
-    font-size: 18px;
-  }
-
-  .blog-area .blog-item .item-img img {
-
-    height: 250px;
-  }
-
-  .gallery-area .gallery-item .gallery-link img {
-
-    height: 250px;
-  }
-
-  .duplicated-slider-1-container .slider-arrow {
-
-    top: calc(250px / 2);
-    transform: none;
-  }
-
 
 }
 
@@ -1459,6 +1345,110 @@ nav .nav-contint .nav-bar .nav-link img {
   background-color: var(--green);
 }
 
+@media(max-width:575.98px) {
+
+  :root {
+
+    --title-1: 32px;
+    --title-2: 28px;
+    --title-3: 24px;
+    --title-4: 22px;
+    --title-5: 20px;
+    --title-6: 18px;
+    --title-7: 16px;
+
+    --border-r-1: 15px;
+    --border-r-2: 10px;
+    --border-r-3: 8px;
+  }
+
+
+  .duplicated-breadcrumb {
+
+    min-height: 220px;
+  }
+
+  .show-more-link:not(.lg-btn) {
+
+    max-width: 120px;
+  }
+
+  .slider-end {
+
+    padding-bottom: calc(1.5rem - 1rem);
+  }
+
+  .scrollbar-slider {
+
+    padding-bottom: 1rem;
+  }
+
+  .scrollbar-slider .swiper-scrollbar {
+
+    display: block;
+    height: 3px;
+  }
+
+  .slider-container.no-m-arrow .slider-arrow {
+
+    display: none;
+  }
+
+  img.col-home-img {
+
+    max-height: 250px;
+  }
+
+  .product-features-area {
+
+    padding: 2rem 1rem;
+  }
+
+  .product-features-area .product-features-texts .feature-item .item-icon {
+
+    margin-left: .75rem;
+  }
+
+  .products-banners-area .banner-item {
+
+    padding: 2rem 1.5rem;
+
+  }
+
+  .products-banners-area .banner-item .banner-img {
+
+    max-height: 250px;
+  }
+
+  .about-area .about-img img {
+
+    max-height: 250px;
+  }
+
+  .about-area .about-text .about-desc,
+  .features-area .features-title-wrap .desc {
+
+    font-size: 18px;
+  }
+
+  .blog-area .blog-item .item-img img {
+
+    height: 250px;
+  }
+
+  .gallery-area .gallery-item .gallery-link img {
+
+    height: 250px;
+  }
+
+  .duplicated-slider-1-container .slider-arrow {
+
+    top: calc(250px / 2);
+    transform: none;
+  }
+
+
+}
 
 /************ contact us ************************/
 
@@ -1639,6 +1629,20 @@ footer {
 
 .footer-menu .menu-list .item-link:hover {
   color: var(--green);
+}
+
+.footer-menu .footer-logo {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+@media(max-width:991.98px) {
+  .footer-menu .footer-logo {
+    padding-bottom: .75rem;
+  }
 }
 
 .footer-menu .footer-logo img {
@@ -2087,12 +2091,26 @@ footer .copy-rights p {
 
 /* ********** mobile-menu ********* */
 
+.mobile-menu-nav-tabs .mobile-tab.tab-btn{
+  padding: 1.25rem 0.5rem;
+  background-color: #dddddd92;
+  border-bottom: #dddddd92 2px solid;
+  color: #000;
+  font-weight: bold;
+}
 
-.mobile-menu-wrapper .menu-search form{
+.mobile-menu-nav-tabs .mobile-tab.tab-btn.active{
+  background-color: #ddd;
+  border-bottom: var(--green) 2px solid;
+  color: var(--green);
+}
+
+
+.mobile-menu-wrapper .menu-search form {
   width: 100%;
 }
 
-.mobile-menu-wrapper .menu-search form .menu-search-form{
+.mobile-menu-wrapper .menu-search form .menu-search-form {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
@@ -2101,7 +2119,7 @@ footer .copy-rights p {
   border-bottom: 1px solid var(--green);
 }
 
-.mobile-menu-wrapper .menu-search form .menu-search-form input{
+.mobile-menu-wrapper .menu-search form .menu-search-form input {
   flex: 1;
   max-width: calc(100% - 80px);
   padding: .25rem 0.75rem;
@@ -2112,7 +2130,7 @@ footer .copy-rights p {
   border-radius: 4px;
 }
 
-.mobile-menu-wrapper .menu-search form .menu-search-form .search-btn{
+.mobile-menu-wrapper .menu-search form .menu-search-form .search-btn {
   all: unset;
   flex: 1;
   width: 75px;
@@ -2124,6 +2142,39 @@ footer .copy-rights p {
   border-radius: 4px;
   cursor: pointer;
   color: #fff;
+}
+
+.mobile-menu-wrapper .menu-search-mobile form .menu-search-mobile-form{
+  position: relative;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.mobile-menu-wrapper .menu-search-mobile form .menu-search-mobile-form input{
+  width: 100%;
+  height: 40px;
+  padding: 0.5rem 0.5rem 0.5rem 30px;
+}
+
+.mobile-menu-wrapper .menu-search-mobile form .menu-search-mobile-form .menu-search-mobile-btn{
+  all: unset;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.mobile-menu-wrapper .menu-search-mobile .menu-search-mobile-btn img{
+  width: 20px;
+  height: 20px;
+  filter: invert(0.7);
+  object-fit: contain;
 }
 
 .mobile-menu-wrapper .mobile-menu-container {
@@ -2152,14 +2203,15 @@ footer .copy-rights p {
   display: flex;
   align-items: center;
   background-color: #fff;
-  border-bottom: 1px solid var(--green);
+  padding: 0 1rem;
+  gap: 1rem;
 }
 
 .mobile-menu-wrapper .mobile-menu-container .mobile-nav-tabs .mobile-tab {
   position: relative;
-  padding: 18px 15px;
-  color: var(--green);
-  background-color: #fff;
+  padding: 12px 15px;
+  background-color: var(--green);
+  color: #fff;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: .3px;
@@ -2169,10 +2221,6 @@ footer .copy-rights p {
   transition: background-color .25s ease, color .25s ease;
 }
 
-.mobile-menu-wrapper .mobile-menu-container .mobile-nav-tabs .mobile-tab.active {
-  background-color: var(--green);
-  color: #fff;
-}
 
 .mobile-menu-wrapper .mobile-menu-container .mobile-menu-tab-pane .mobile-menu .mobile-menu-item {
   display: block;
@@ -2190,8 +2238,8 @@ footer .copy-rights p {
   flex-direction: row;
   font-size: 16px;
   transition: all .3s ease;
-  font-weight: 400;
   padding: .75rem;
+  font-weight: 700;
 }
 
 
