--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,11 +10,12 @@
 
   .product-card .card-body .card-title {
     font-size: 1.25rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
   }
 
   .product-card .card-body .card-items{
     margin-bottom: 0.75rem;
+    gap: 0.75rem;
   }
 
   .product-card .card-body .card-items .card-price:last-child {
@@ -26,7 +27,7 @@
     justify-content: space-between;
     flex-direction: row;
     gap: 0.25rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.75rem;
   }
 
   .product-card .card-body .add-btn {
